# Conduit

./: .env.example  .gitignore  DEMO.md  Dockerfile  LICENSE  PUBLISHING.md  README.md  SECURITY_AUDIT.md  alembic.ini  cleanup_db.py  conduit_competitive_intel.md  conduit_full_architecture.md  conduit_noncustodial_architecture.md  demo_e2e.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 320fbf512bda_add_federated_attestations_cache.py  5115ab669040_add_federation_fields_to_skill_.py  8653ac33d7b0_add_spending_logs_table.py  a1b2c3d4e5f6_add_platform_fee_fields_to_executions.py  c4d5e6f7a8b9_add_skill_id_to_anomaly_flags.py  d2c4f6a8b0e1_add_cached_skills_catalog.py  e5ca7b709dad_add_anomaly_flags_table.py  f6e0d4715ba0_initial_schema.py  fad118a12739_drop_dead_consumer_pubkey_column.py
cli/: index.mjs  package.json
docs/: CNAME  docs.html  faq.html  index.html  install.sh  marketplace.html  setup-prompt.txt  setup.md  skills.json
docs/.well-known/: nostr.json
scripts/: gen_protos.sh  publish_ll_profile.py  publish_skills.py
seed-skills/: .dockerignore  .env.example  Caddyfile  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
seed-skills/app/: __init__.py  contract.py  http.py  main.py  nostr.py  ots.py  payment.py  registry.py
seed-skills/app/skills/: __init__.py  bolt11_decode.py  btc_price.py  entity_extract.py  geocode.py  hash_digest.py  image_convert.py  json_csv.py  markdown_html.py  mempool_fees.py  nostr_profile.py  opentimestamps_stamp.py  pdf_text.py  qr_generate.py  text_stats.py  weather.py
seed-skills/tests/: conftest.py  test_contract.py  test_skills.py  test_skills_batch2.py  test_skills_batch3.py  test_skills_batch4.py  test_skills_batch4b.py
site/: index.html
src/conduit/: __init__.py  main.py  mcp_http.py  mcp_server.py
src/conduit/api/: deps.py
src/conduit/api/middleware/: __init__.py  l402.py  rate_limit.py  verification.py
src/conduit/api/routers/: __init__.py  admin.py  federation.py  invoices.py  lightning.py  marketplace.py  nostr.py  payments.py  security.py  wallets.py
src/conduit/core/: config.py  database.py
src/conduit/models/: __init__.py  anomaly_flag.py  base.py  cached_skill.py  execution.py  federated_attestation.py  invoice.py  payment.py  rating.py  skill.py  spending_log.py  wallet.py
src/conduit/schemas/: invoice.py  payment.py  wallet.py
src/conduit/services/: anomaly_detector.py  catalog_transport.py  federation.py  federation_cache.py  federation_catalog.py  fee_calculator.py  l402.py  lnd.py  macaroon_auth.py  node_identity.py  nostr.py  nwc.py  provider_verification.py  rate_limiter.py  rating_integrity.py  rating_prompt.py  reliability.py  skill_executor.py  skill_report.py  spending_limiter.py  stablecoin_quote.py  swap_provider.py  text_sanitize.py  url_safety.py  wallet_backend.py
src/conduit/services/proto_generated/: lightning_pb2.py  lightning_pb2_grpc.py
tests/: conftest.py  test_anomaly_detector.py  test_api.py  test_confirm_flow.py  test_core_db_e2e.py  test_federation.py  test_federation_cache.py  test_federation_catalog.py  test_federation_catalog_e2e.py  test_federation_catalog_refresh.py  test_federation_catalog_serve.py  test_federation_catalog_transport.py  test_federation_discovery.py  test_federation_e2e.py  test_federation_execution_guard.py  test_fee_calculator.py  test_health.py  test_l402.py  test_macaroon_auth.py  test_mcp_http.py  test_node_identity.py  test_nostr.py  test_nwc.py  test_nwc_multi_relay.py  test_provider_verification.py  test_rate_limiter.py  test_rating_integrity.py  test_rating_prompt.py  test_reliability.py  test_skill_executor.py  test_skill_report.py  test_spending_limiter.py  test_stablecoin_custody_tripwire.py  test_stablecoin_quote.py  test_swap_provider.py  test_url_safety.py
