[project]
name = "conduit-lightning"
version = "0.1.0"
description = "Lightning Payment Rails for AI Agents — discover, pay for, and execute skills over Lightning via MCP or REST"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Lightning Linq" }]
keywords = ["lightning", "bitcoin", "mcp", "ai-agents", "nostr", "nwc", "l402", "payments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "redis>=5.0.0",
    "grpcio>=1.64.0",
    "protobuf>=5.27.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "pymacaroons>=0.13.0",
    "qrcode[pil]>=7.4.0",
    "websockets>=12.0",
    "coincurve>=20.0.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    # Only needed to regenerate the LND proto stubs — not a runtime dependency.
    "grpcio-tools>=1.64.0",
]
# Tooling to build and publish the package — see PUBLISHING.md.
publish = [
    "build>=1.2.0",
    "twine>=5.0.0",
]

[project.scripts]
# Console entry points installed by `pip install conduit-lightning`:
#   conduit-mcp — MCP server over stdio (primary agent interface)
#   conduit-api — REST API served by uvicorn
conduit-mcp = "conduit.mcp_server:run"
conduit-api = "conduit.main:run"

[project.urls]
Homepage = "https://github.com/Lightning-Linq/Conduit"
Repository = "https://github.com/Lightning-Linq/Conduit"
Issues = "https://github.com/Lightning-Linq/Conduit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conduit"]

[tool.ruff]
target-version = "py311"
line-length = 100
# Generated code — not hand-maintained, so not linted:
#   proto_generated/  : protoc/grpc output (PascalCase gRPC methods, long lines)
#   alembic/versions/ : autogenerated migration scripts
extend-exclude = ["src/conduit/services/proto_generated", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# UP042: status enums deliberately use `(str, Enum)` rather than `StrEnum`.
# StrEnum changes str()/format output from `ClassName.MEMBER` to the bare
# value, which our __repr__ helpers and logging rely on staying qualified.
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
# BIP-340 Schnorr is implemented here using the spec's single-capital
# notation (P, R, Px, sG, eP). Lowercasing would obscure the cross-reference
# to the spec, so non-lowercase locals are allowed in this file.
"src/conduit/services/nostr.py" = ["N806"]
# This module extends sys.path to import the generated proto package before
# any conduit.* imports, so those imports are intentionally not at the top.
"src/conduit/mcp_server.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
